--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "psr/container": "~1.0.0",
+        "psr/container": "^1.1",
         "psr/event-dispatcher": "^1.0",
         "psr/log": "^1.0"
     },
