--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "raylin666/contract",
+    "name": "guanhui07/contract",
     "description": "The contracts of raylin666",
     "keywords": [
         "sdk",
